--- a/pom.xml
+++ b/pom.xml
@@ -224,12 +224,12 @@
         <dependency>
             <groupId>com.mockrunner</groupId>
             <artifactId>mockrunner-core</artifactId>
-            <version>1.0.10-SNAPSHOT</version>
+            <version>1.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.mockrunner</groupId>
             <artifactId>mockrunner-jdbc</artifactId>
-            <version>1.0.10-SNAPSHOT</version>
+            <version>1.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.perfmock</groupId>
