--- a/pom.xml
+++ b/pom.xml
@@ -181,16 +181,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-c3p0</artifactId>
-            <version>${version.hibernate}</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
         </dependency>
-        <dependency>
-            <groupId>org.perfmock</groupId>
-            <artifactId>perfmock</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
     </dependencies>
 
 
