--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>jboss-public-repository-group-snapshots</id>
+            <name>JBoss Public Maven Repository Group</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <properties>
@@ -59,6 +71,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.3.176</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -215,7 +233,16 @@
 
             <properties>
                 <version.hibernate>6.0.0-SNAPSHOT</version.hibernate>
+                <version.hibernate-sqm>1.0.0-SNAPSHOT</version.hibernate-sqm>
             </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-sqm</artifactId>
+                    <version>${version.hibernate-sqm}</version>
+                </dependency>
+            </dependencies>
 
             <build>
                 <plugins>
