--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,12 @@
                     <artifactId>hibernate-sqm</artifactId>
                     <version>${version.hibernate-sqm}</version>
                 </dependency>
+
+                <dependency>
+                    <groupId>org.hibernate.design.orm</groupId>
+                    <artifactId>hibernate-orm-sqm-poc</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
             </dependencies>
 
             <build>
